--- a/ionCordova/www/templates/sqlite.html
+++ b/ionCordova/www/templates/sqlite.html
@@ -1,12 +1,14 @@
 <ion-view view-title="SQLite">
     <ion-content class="padding">
-        <h3 class="text-center">SQLite</h3>
- 
-        <br/>
-        <br/>
- 
-        <h5>Messages</h5>
-        <code ng-bind-html="messages"></code>
- 
+        <h3 class="text-center">Calendar</h3>
+		
+		
+		  <button class="button" ng-click="createEvent()">Create Event</button> <br/>
+		  <button class="button" ng-click="createCalendar()">Create Calendar</button> <br/>
+		  <button class="button" ng-click="deleteCalendar()">Delete Calendar</button> <br/>
+		  <button class="button" ng-click="openCalendar()">Open Calendar</button>
+		
+
+		 
     </ion-content>
 </ion-view>
